# LM

./: .gitignore  .prettierrc  README.md  TESTS.md  finetune.py  hellaswag.py  huggingface.py  info.py  load.py  model.py  pyproject.toml  scheduler.py  temp_hf.py  test.txt  train.py
data/RLHF/: prepare.py
data/fineweb_edu/: prepare.py
data/openwebtext/: prepare.py
loaders/: data_loader.py  model_loader.py
runs/Apr26_12-18-41_ip-10-192-10-211/: events.out.tfevents.1714133921.ip-10-192-10-211.3223.0
runs/ler_decay/: events.out.tfevents.1714812847.ip-10-192-12-200.2633.0
runs/microbatch/: events.out.tfevents.1714575454.ip-10-192-12-96.22758.0  events.out.tfevents.1714587764.ip-10-192-12-96.130933.0
runs/openwebtext_dataset/: events.out.tfevents.1714295724.ip-10-192-12-209.2227.0
runs/pretrained_gpt2_openwebtext/: events.out.tfevents.1714588680.ip-10-192-12-96.145997.0  events.out.tfevents.1714633716.ip-10-192-12-128.2788.0
runs/rope_implemented/: events.out.tfevents.1714150932.Pols-MacBook-Pro-2.local.7152.0
runs/share_weights/: events.out.tfevents.1715171422.ip-10-192-12-164.2379.0  events.out.tfevents.1715236533.ip-10-192-11-158.3313.0  events.out.tfevents.1715236862.ip-10-192-11-158.8495.0  events.out.tfevents.1715237081.ip-10-192-11-158.11810.0  events.out.tfevents.1715237551.ip-10-192-11-158.17531.0  events.out.tfevents.1715237579.ip-10-192-11-158.17977.0  events.out.tfevents.1715237822.ip-10-192-11-158.19641.0  events.out.tfevents.1715462463.ip-10-192-12-66.17045.0  (+11 more)
training/: data_loader.py  model_loader.py
(+4 files in other folders)
