[tool.poetry]
name = "lm"
version = "0.1.0"
description = ""
authors = ["PolRF <pol@lumo.homes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
tiktoken = "^0.6.0"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
