[tool.poetry]
name = "lm"
version = "0.1.0"
description = ""
authors = ["PolRF <pol@lumo.homes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
tiktoken = "^0.6.0"
numpy = "^1.26.4"
datasets = "^2.19.0"
transformers = "^4.40.1"
wandb = "^0.16.6"
torch-tb-profiler = "^0.4.3"
torchvision = "^0.19.0"
huggingface-hub = "^0.24.0"
lm-eval = "^0.4.3"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
tensorboard = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
